--- a/packages/reason-skia/src/wrapped/types/dune
+++ b/packages/reason-skia/src/wrapped/types/dune
@@ -1,4 +1,4 @@
 (library
  (name SkiaWrappedTypes)
- (public_name skia.wrapped.types)
+ (public_name reason-skia.wrapped.types)
  (libraries ctypes))
