--- a/examples/skia-cli/dune
+++ b/examples/skia-cli/dune
@@ -4,9 +4,9 @@
     (public_names SkiaCli)
     (modes native byte)
     (libraries
-        skia
-        skia.wrapped.bindings
-        skia.wrapped
+        reason-skia
+        reason-skia.wrapped.bindings
+        reason-skia.wrapped
         reason-native-crash-utils.asan
 ))
 
