--- a/examples/skia-sdl2/dune
+++ b/examples/skia-sdl2/dune
@@ -3,7 +3,7 @@
  (package ReveryExamples)
  (public_names SkiaSdl)
  (modes native byte)
- (libraries skia sdl2 lwt integers skia.wrapped.bindings skia.wrapped))
+ (libraries reason-skia sdl2 lwt integers reason-skia.wrapped.bindings reason-skia.wrapped))
 
 (install
  (section bin)
