--- a/packages/reason-skia/src/dune
+++ b/packages/reason-skia/src/dune
@@ -5,7 +5,7 @@
 
 (library
   (name skia)
-  (public_name skia)
+  (public_name reason-skia)
   (library_flags (:include flags.sexp))
   (c_library_flags (:include c_library_flags.sexp))
   (libraries
