--- a/test/reason-skia/dune
+++ b/test/reason-skia/dune
@@ -3,9 +3,9 @@
     (flags (:standard (-w -39)))
     (ocamlopt_flags -linkall -g)
     (libraries rely.lib rely.internal
-        skia
-        skia.wrapped.bindings
-        skia.wrapped
+        reason-skia
+        reason-skia.wrapped.bindings
+        reason-skia.wrapped
         )
 
 )
