harfbuzz -> reason-harfbuzz

--- a/packages/reason-harfbuzz/src/dune
+++ b/packages/reason-harfbuzz/src/dune
@@ -1,6 +1,6 @@
 (library
  (name harfbuzz)
- (public_name harfbuzz)
+ (public_name reason-harfbuzz)
  (libraries skia ctypes)
  (library_flags
   (:include flags.sexp))
