refactor: consistent package naming (#952)
* Revery.Zed -> Revery.zed

* Revery.TextWrap -> Revery.text-wrap

* skia -> reason-skia

* sdl2 -> reason-sdl2

* harfbuzz -> reason-harfbuzz

* fix build and install commands

--- a/examples/text-wrap-cli/dune
+++ b/examples/text-wrap-cli/dune
@@ -3,7 +3,7 @@
  (package ReveryExamples)
  (public_names ReveryTextWrapCli)
  (modes native byte)
- (libraries Revery.TextWrap Revery.Zed))
+ (libraries Revery.text-wrap Revery.zed))
 
 (install
  (section bin)
