--- a/packages/reason-skia/examples/skia-font-manager-cli/dune
+++ b/packages/reason-skia/examples/skia-font-manager-cli/dune
@@ -3,9 +3,9 @@
  (package ReveryExamples)
  (public_names SkiaFontManagerCli)
  (modes native byte)
- (libraries reason-skia reason-skia.wrapped.bindings reason-skia.wrapped Revery.zed))
+ (libraries reason-skia reason-native-crash-utils.asan reason-skia.wrapped.bindings reason-skia.wrapped Revery.zed))
 
 (install
  (section bin)
  (package ReveryExamples)
- (files SkiaFontManagerCli.bc))
+ (files SkiaFontManagerCli.bc run-skia-fontmanager.sh))
