CI: change command for SkiaFontManagerCli

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -19,10 +19,8 @@ steps:
     displayName: '@esy @examples x SkiaCli'
   - script: esy @examples x SkiaCli.bc
     displayName: '@esy @examples x SkiaCli.bc'
-  - script: esy @examples x SkiaFontManagerCli
-    displayName: 'esy @examples x SkiaFontManagerCli'
-  - script: esy @examples x SkiaFontManagerCli.bc
-    displayName: 'esy @examples x SkiaFontManagerCli.bc'
+  - script: esy @examples run-skia-fontmanager
+    displayName: 'esy @examples run-skia-fontmanager'
   - script: esy @examples x ReveryTextWrapCli
     displayName: 'esy @examples x ReveryTextWrapCli'
   - script: esy @examples x ReveryTextWrapCli.bc
